--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,32 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+body, html {
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+      monospace;
+  }
+
+  @keyframes colorTransition {
+    0% {
+      color: white; /* Initial color */
+    }
+    100% {
+      color: yellow; /* Final color */
+    }
+  }
+  
+  .quick-guide {
+    animation: colorTransition 2s infinite alternate; /* Use 'alternate' to reverse the animation direction */
+  }
+  
