--- a/src/index.css
+++ b/src/index.css
@@ -29,4 +29,40 @@ body, html {
   .quick-guide {
     animation: colorTransition 2s infinite alternate; /* Use 'alternate' to reverse the animation direction */
   }
+
+  .banner{
+    background: url("./images/Banner.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  .btn-yellow{
+    background-color: rgb(223, 175, 17);
+  }
+
+  .btn-yellow:hover{
+    background-color: rgb(188, 153, 12);
+}
+  .btn-red{
+    background-color: rgb(232, 0, 0);
+  }
+
+  .btn-red:hover{
+    background-color: rgb(191, 15, 2);
+}
+  .btn-green{
+    background-color: rgb(0, 232, 4);
+  }
+
+  .btn-green:hover{
+    background-color: rgb(43, 191, 2);
+}
+  .btn-blue{
+    background-color: rgb(0, 73, 232);
+  }
+
+  .btn-blue:hover{
+    background-color: rgb(2, 30, 191);
+}
   
