--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-body, html {
+*{
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -10,6 +10,7 @@ body, html {
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    box-sizing: border-box;
   }
   
   code {
@@ -149,4 +150,45 @@ body, html {
     border-bottom: 3px solid greenyellow;
     transform: scale(1.02);
   }
+}
+
+
+
+/* To center the dropdown elemnts of translation */
+
+.goog-te-gadget-simple{
+display: flex;
+justify-content: center;
+align-items: center;
+padding: 8px;
+background-color: transparent;
+border: 0;
+}
+
+.goog-te-gadget-icon{
+  display: none !important;
+}
+
+.VIpgJd-ZVi9od-xl07Ob-lTBxed span{
+  color: white !important;
+}
+
+.goog-te-gadget-simple .VIpgJd-ZVi9od-xl07Ob-lTBxed{
+  display: flex;
+}
+.goog-te-gadget-simple .VIpgJd-ZVi9od-xl07Ob-lTBxed span {
+  float: inline-end;
+}
+
+/*  To Disable google's top banner of translation*/
+.goog-te-gadget{
+  /* background-color: white; */
+  color: transparent !important;
+}
+.VIpgJd-ZVi9od-ORHb-OEVmcd{
+  display: none !important;
+}
+
+body{
+  top: 0px !important;
 }
