--- a/src/index.css
+++ b/src/index.css
@@ -98,61 +98,79 @@
 }
 
 /* Navbar */
-
 @media (min-width: 1024px) {
-  .navigation-list li ul{
+  .navigation-list li {
+    position: relative; /* Set parent li to relative position */
+  }
+  
+  .navigation-list li ul {
+    display: none;
+    position: absolute;
+    width: auto;
+    background-color: white;
+    padding: 3px 3px;
+    left: -25px;
+    top: calc(100%);
+    border-radius: 10px; 
+    z-index: 1000; 
+    box-shadow: 2px 2px 8px 2px greenyellow;
+  }
+  
+  .navigation-list li ul li {
+    font-weight: 400;
+    font-size: small;
+    text-wrap: nowrap;
+    padding: 8px 3rem;
+    border-bottom: 2px solid gainsboro;
+    transition: all 200ms ease-in-out;
+  }
+  
+  .navigation-list li:hover ul {
+    display: block;
+  }
+  
+  .navigation-list li ul li:hover {
+    border-bottom: 2px solid greenyellow;
+    transform: scale(1.03);
+  }
+}
+
+@media (max-width: 1023px) {
+  .navigation-list li {
+    position: relative; /* Set parent li to relative position */
+  }
+  
+  .navigation-list li ul {
     display: none;
     position: absolute;
     background-color: white;
-    padding: 2rem 1.5rem;
-    translate: -20px;
-    border-radius: 10px 10px;
-    box-shadow: 2px 2px 8px 2px greenyellow;
+    border: 2px solid greenyellow;
+    padding: 3px 3px;
+    left: -25px; /* Align the left edge of the dropdown with the left edge of the parent li */
+    top: calc(100%); /* Position the dropdown just below the parent li */
+    border-radius: 10px; /* Adjust border-radius */
+    box-shadow: 2px 2px 20px 2px greenyellow;
+    z-index: 1000; /* Set z-index to a higher value */
   }
-  .navigation-list li ul li{
-    font-weight: 500;
-    padding: 8px 2rem;
-    border-bottom: 3px solid gainsboro;
-    border-radius: 5px;
+  
+  .navigation-list li ul li {
+    font-weight: 400;
+    font-size: small;
+    text-wrap: nowrap;
+    padding: 8px 3rem;
+    border-bottom: 2px solid gainsboro;
     transition: all 200ms ease-in-out;
   }
+  
   .navigation-list li:hover ul {
     display: block;
   }
   
-  .navigation-list li ul li:hover{
-    border-bottom: 3px solid greenyellow;
-    transform: scale(1.02);
+  .navigation-list li ul li:hover {
+    border-bottom: 2px solid greenyellow;
+    transform: scale(1.03);
   }
 }
-
-@media (max-width: 1023px){
-  .navigation-list li ul{
-    display: none;
-    position: relative;
-    background-color: white;
-    padding: 2rem 1.5rem;
-    translate: -20px;
-    border-radius: 10px 10px;
-    box-shadow: 2px 2px 8px 2px greenyellow;
-  }
-  .navigation-list li ul li{
-    font-weight: 500;
-    padding: 8px 2rem;
-    border-bottom: 3px solid gainsboro;
-    border-radius: 5px;
-    transition: all 300ms ease-in-out;
-  }
-  .navigation-list li:hover ul {
-    display: block;
-  }
-  
-  .navigation-list li ul li:hover{
-    border-bottom: 3px solid greenyellow;
-    transform: scale(1.02);
-  }
-}
-
 
 
 /* To center the dropdown elemnts of translation */
